# aoc2020

./: default.nix  packages.nix
haskell/: default.nix  helper.nix
haskell/day1/: Main.hs  day1.cabal  default.nix  hie.yaml
rust/: helper.nix  packages.nix
rust/day1/: default.nix
