cabal-version:       >=1.10

name:                day1
version:             0.1.0.0
author:              Andreas Rammhold
maintainer:          andreas@rammhold.de
build-type:          Simple
extra-source-files:  CHANGELOG.md


common common-options
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wno-name-shadowing

library
  import               common-options
  exposed-modules:     Day1
  build-depends:       base >=4.13 && <4.14, bytestring >= 0.10
                     , binary
  hs-source-dirs:      ./src

executable day1
  import               common-options
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14, day1

test-suite tests
  import               common-options
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      ./tests
  other-modules:       Day1
  build-depends:       base >=4.13 && <4.14
                     , hspec
                     , day1
                     , bytestring
